# clauter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
configs/: base.yaml  daegc_cora.yaml  daegc_cora_ablation_old.yaml  daegc_cora_finetune.yaml  daegc_cora_grid.yaml  daegc_cora_pretrain.yaml  daegc_synthetic.yaml  dec_mnist.yaml  dec_quick.yaml  dec_usps.yaml  gae_synthetic.yaml  idec_mnist.yaml  idec_quick.yaml  idec_usps.yaml
deepclust_base/: __init__.py
deepclust_base/datasets/: __init__.py  loader.py  planetoid.py  preprocess.py
deepclust_base/engine/: evaluator.py  trainer.py
deepclust_base/losses/: __init__.py  clustering.py  reconstruction.py
deepclust_base/models/: __init__.py  base_model.py  daegc.py  dec.py  gae_kmeans.py  idec.py  registry.py
deepclust_base/utils/: checkpoint.py  io.py  logger.py  metrics.py  seed.py
docs/: DEC_IDEC_QUICKSTART.md  daegc-migration.md  daegc-usage.md
scripts/: daegc_finetune.py  daegc_pretrain.py  eval.py  prepare_cora.py  sanity_check.py  train.py  train_dec_idec.py
